--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "promise-mysql": "^3.3.2"
+    "promise-mysql": "^3.3.2",
+    "tsc": "^1.20150623.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
