--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.0",
     "chokidar": "^3.4.0",
     "core-js": "^2.5.4",
+    "ngx-chips": "^2.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.3"
