--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "promise-mysql": "^3.3.2",
-    "tsc": "^1.20150623.0"
+    "tsc": "^1.20150623.0",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
@@ -27,6 +28,6 @@
     "@types/morgan": "^1.7.35",
     "@types/mysql": "^2.15.5",
     "@types/node": "^14.0.13",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.19.4"
   }
 }
